Change page names to lowercase

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -7,7 +7,7 @@
     <script id="cardTemplate" type="x-tmpl-mustache">
         <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" id="card-{{ cardId }}">
             <div class="card card-civbuddy card-status-{{ status }} {{ borderStyle }} mb-3"
-                onclick="CivBuddy.buttonClick(this, 'Cards', 'click', '{{ cardId }}')">
+                onclick="CivBuddy.buttonClick(this, 'cards', 'click', '{{ cardId }}')">
                 <div class="card-combined-header">
                     <div class="card-header">
                         <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
@@ -47,7 +47,7 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
         <div class="row">
-            <!-- Item 1: Link to 'Players' page and game name -->
+            <!-- Item 1: Link to 'players' page and game name -->
             <div class="col-1 col-lg-3 d-none d-md-inline-block">
                 <p class="navbar-brand fix-padding mb-0"><a class="nav-action" href="players.html"><!-- TODO add game id to link --><span class="oi oi-arrow-thick-left mr-4"
                     aria-hidden="true" style="position: relative; top: 3px;"></span></a><span
