--- a/resources/index.html
+++ b/resources/index.html
@@ -6,10 +6,10 @@
 
     <script id="gameTemplate" type="x-tmpl-mustache">
         <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" id="{{ gameKey }}">
-            <div class="card card-clickable border-info mb-3" onclick="CivBuddy.buttonClick(this, 'Games', 'select', '{{ gameKey }}')">
+            <div class="card card-clickable border-info mb-3" onclick="CivBuddy.buttonClick(this, 'games', 'select', '{{ gameKey }}')">
                 <div class="card-header">{{ ruleDisplayName }}
                     <button type="button" class="close" aria-label="Delete Game"
-                        onclick="CivBuddy.buttonClick(this, 'Games', 'delete', '{{ gameKey }}', '{{ gameName }}', event)">
+                        onclick="CivBuddy.buttonClick(this, 'games', 'delete', '{{ gameKey }}', '{{ gameName }}', event)">
                         <span class="oi oi-trash" aria-hidden="true"></span>
                     </button>
                 </div>
@@ -36,7 +36,7 @@
         <div class="form-check">
             <label class="form-check-label">
                 <input class="form-check-input" type="radio" name="optionsRadios" value="{{ variantId }}"{{#checked}}
-                    checked=""{{/checked}} onclick="CivBuddy.buttonClick(this, 'Games', 'chooseVariant', '{{ variantId }}')">
+                    checked=""{{/checked}} onclick="CivBuddy.buttonClick(this, 'games', 'chooseVariant', '{{ variantId }}')">
                 {{ displayName }}
             </label>
         </div>
@@ -100,7 +100,7 @@
                 </fieldset>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" onclick="CivBuddy.buttonClick(this, 'Games', 'create')" data-l10n-id="games-newModal-button-create"></button>
+                <button type="button" class="btn btn-success" onclick="CivBuddy.buttonClick(this, 'games', 'create')" data-l10n-id="games-newModal-button-create"></button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" data-l10n-id="games-newModal-button-close"></button>
             </div>
         </div>
