--- a/resources/index.html
+++ b/resources/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarLangDropdownLabel" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarLangDropdownLabel" id="otherLanguageFlags"></div>
         </li>
     </ul>
 </nav>
