Remove sample cards from 'cards' page

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -139,165 +139,7 @@
 
 <!-- List of cards -->
 <div class="container card-container">
-    <div class="row" id="cardList">
-
-        <!-- possible Karte -->
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Metalworking">
-            <div class="card card-civbuddy card-status-absent border-info mb-3">
-                <div class="card-combined-header">
-                    <div class="card-header">
-                        <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt="">
-                        <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
-                    </div>
-                    <div class="card-nominal-cost">200</div>
-                </div>
-                <div class="card-combined-title">
-                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
-                    <div class="card-current-cost">170</div>
-                </div>
-                <div class="card-body">
-                    <p class="card-text card-status-expl mb-1" data-l10n-id="cards-card-absent-expl"></p>
-                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
-                        data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
-                    <div style="width: 80%;">
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- zu teure Karte -->
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Law">
-            <div class="card card-civbuddy card-status-unaffordable border-danger mb-3">
-                <div class="card-combined-header">
-                    <div class="card-header">
-                        <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt="">
-                        <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
-                    </div>
-                    <div class="card-nominal-cost">200</div>
-                </div>
-                <div class="card-combined-title">
-                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
-                    <div class="card-current-cost">170</div>
-                </div>
-                <div class="card-body">
-                    <p class="card-text card-status-expl text-danger mb-1" data-l10n-id="cards-card-unaffordable-expl"></p>
-                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
-                        data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
-                    <div style="width: 80%;">
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- owned Karte -->
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Pottery">
-            <div class="card card-civbuddy card-status-owned border-success mb-3">
-                <div class="card-combined-header">
-                    <div class="card-header">
-                        <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt="">
-                        <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
-                    </div>
-                    <div class="card-nominal-cost">200</div>
-                </div>
-                <div class="card-body">
-                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
-                    <p class="card-text card-status-expl text-muted mb-1" data-l10n-id="cards-card-owned-expl"></p>
-                </div>
-            </div>
-        </div>
-        
-        <!-- discouraged Karte -->
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Democracy">
-            <div class="card card-civbuddy card-status-discouraged border-warning mb-3">
-                <div class="card-combined-header">
-                    <div class="card-header">
-                        <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt="">
-                        <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
-                    </div>
-                    <div class="card-nominal-cost">200</div>
-                </div>
-                <div class="card-combined-title">
-                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
-                    <div class="card-current-cost">170</div>
-                </div>
-                <div class="card-body">
-                    <p class="card-text card-status-expl text-warning mb-1" data-l10n-id="cards-card-discouraged-expl" data-l10n-args='{"arg": 50}'></p>
-                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
-                        data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
-                    <div style="width: 80%;">
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- gesperrte Karte (prereq failed) -->
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Coinage">
-            <div class="card card-civbuddy card-status-prereqfailed border-danger mb-3">
-                <div class="card-combined-header">
-                    <div class="card-header">
-                        <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt="">
-                        <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
-                    </div>
-                    <div class="card-nominal-cost">200</div>
-                </div>
-                <div class="card-combined-title">
-                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
-                    <div class="card-current-cost">170</div>
-                </div>
-                <div class="card-body">
-                    <p class="card-text card-status-expl text-danger mb-1" data-l10n-id="cards-card-prereqfailed-expl" data-l10n-args='{"arg": "Gesetz"}'></p>
-                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
-                        data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
-                    <div style="width: 80%;">
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    
-        <!-- geplante Karte -->
-        <div class="col-xl-4 col-lg-5 col-md-6 col-sm-12" keep="true" id="card-sample-Medicine">
-            <div class="card card-civbuddy card-status-planned bg-success mb-3">
-                <div class="card-combined-header">
-                    <div class="card-header">
-                        <img src="img/crafts.svg" alt=""><img src="img/sciences.svg" alt="">
-                        <div class="info-button"><span class="oi oi-info" aria-hidden="true"></span></div>
-                    </div>
-                    <div class="card-nominal-cost">200</div>
-                </div>
-                <div class="card-combined-title">
-                    <h4 class="card-title">Schauspiel &amp; Poesie</h4>
-                    <div class="card-current-cost">170</div>
-                </div>
-                <div class="card-body">
-                    <p class="card-text card-status-expl mb-1" data-l10n-id="cards-card-planned-expl"></p>
-                    <p class="card-text card-credits-info mb-1" data-l10n-id="cards-card-credits-plan"
-                        data-l10n-args='{"currentCards":3,"plannedCards":4,"maxCards":6,"currentCredits":30,"plannedCredits":45,"maxCredits":60}'></p>
-                    <div style="width: 80%;">
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"></div>
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 20%" aria-valuenow="12" aria-valuemin="0" aria-valuemax="60"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="row" id="cardList"></div>
 </div>
 
 <!-- Card Info Modal -->
