Add NavbarController to cards.ts

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -85,14 +85,14 @@
                 </div>
                 <div class="mb-0 text-nowrap d-inline-block d-md-none">
                     <span class="oi oi-target mr-2" aria-hidden="true"></span><span
-                        class="navbarCurrentPoints">245</span><span class="text-muted navbarPointsTarget">/1300</span>
+                        class="navbarCurrentPoints">0</span><span class="text-muted navbarPointsTarget">/1400</span>
                 </div>
             </div>
             <!-- Item 3: Points -->
             <div class="col-3 col-md-2 d-none d-md-inline-block">
                 <p class="navbar-brand fix-padding mb-0">
                     <span class="oi oi-target mr-2" aria-hidden="true"></span><span
-                     class="navbarCurrentPoints">245</span><span class="text-muted navbarPointsTarget">/1300</span>
+                     class="navbarCurrentPoints">0</span><span class="text-muted navbarPointsTarget">/1400</span>
                 </p>
             </div>
             <!-- Item 4: Revise -->
@@ -107,7 +107,8 @@
             </div>
             <!-- Item 6: Buy -->
             <div class="col-2 col-md-1">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"><span class="oi oi-check mx-2" aria-hidden="true"></span><span
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'buy')"><span
+                    class="oi oi-check mx-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
             <!-- Item 7: Language -->
