Add gameId to backlinks to 'players' page

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -57,7 +57,7 @@
         <div class="row">
             <!-- Item 1: Link to 'players' page and game name -->
             <div class="col-1 col-lg-3 d-none d-md-inline-block">
-                <p class="navbar-brand fix-padding mb-0"><a class="nav-action" href="players.html"><!-- TODO add game id to link --><span class="oi oi-arrow-thick-left mr-4"
+                <p class="navbar-brand fix-padding mb-0"><a class="nav-action add-game-id" href="players.html"><span class="oi oi-arrow-thick-left mr-4"
                     aria-hidden="true" style="position: relative; top: 3px;"></span></a><span
                     id="gameName" class="d-none d-lg-inline-block">2018-01-03 Regensburg</span></p> <!-- TODO overflow ellipsis for long names -->
             </div>
@@ -71,7 +71,7 @@
                             <a class="nav-link" href="#"><span class="oi oi-person mx-2" aria-hidden="true"></span>Ikarus</a>
                             <a class="nav-link" href="#"><span class="oi oi-person mx-2" aria-hidden="true"></span>John Doe</a>
                             <div class="dropdown-divider"></div><!-- TODO show divider only when at least one player above it -->
-                            <a class="nav-link" href="#"><span class="oi oi-people mx-2" aria-hidden="true"></span>Players</a><!-- TODO add game id to link -->
+                            <a class="nav-link add-game-id" href="players.html"><span class="oi oi-people mx-2" aria-hidden="true"></span>Players</a>
                             <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2" aria-hidden="true"></span>Games</a>
                         </div>
                     </li>
