--- a/resources/cards.html
+++ b/resources/cards.html
@@ -48,6 +48,9 @@
         </div>
     </script>
 
+    <script id="switchPlayerLinkTemplate" type="x-tmpl-mustache">
+        <a class="nav-link switch-player-link" href="cards.html?ctx={{ situationId }}"><span class="oi oi-person mx-2" aria-hidden="true"></span>{{ playerName }}</a>
+    </script>
 </head>
 <body>
 
@@ -66,11 +69,10 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link nav-action fix-padding dropdown-toggle" href="#" id="navbarPlayerDropdownLabel" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false"><span class="oi oi-person mr-2 d-none d-md-inline-block" aria-hidden="true"></span>Ramses</a>
+                            aria-haspopup="true" aria-expanded="false"><span class="oi oi-person mr-2 d-none d-md-inline-block"
+                            aria-hidden="true"></span><span id="currentPlayerName">(not set)</span></a>
                         <div class="dropdown-menu" aria-labelledby="navbarPlayerDropdownLabel" id="playerDropdown">
-                            <a class="nav-link" href="#"><span class="oi oi-person mx-2" aria-hidden="true"></span>Ikarus</a>
-                            <a class="nav-link" href="#"><span class="oi oi-person mx-2" aria-hidden="true"></span>John Doe</a>
-                            <div class="dropdown-divider"></div><!-- TODO show divider only when at least one player above it -->
+                            <div class="dropdown-divider d-none"></div>
                             <a class="nav-link add-game-id" href="players.html"><span class="oi oi-people mx-2" aria-hidden="true"></span>Players</a>
                             <a class="nav-link" href="index.html"><span class="oi oi-account-logout mx-2" aria-hidden="true"></span>Games</a>
                         </div>
