Wire remaining navbar buttons

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -99,12 +99,14 @@
             </div>
             <!-- Item 4: Revise -->
             <div class="col-1 d-none d-md-inline-block">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"><span class="oi oi-random mr-2" aria-hidden="true"></span><span
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'revise')"><span
+                    class="oi oi-random mr-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-revise"></span></a></p>
             </div>
             <!-- Item 5: Filter -->
             <div class="col-1">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#"><span class="oi oi-eye mr-2" aria-hidden="true"></span><span
+                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'filter')"><span
+                    class="oi oi-eye mr-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-filter"></span></a></p>
             </div>
             <!-- Item 6: Buy -->
