Implement 'Buy' button on 'cards' page

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -162,13 +162,13 @@
                     <span data-l10n-id="cards-infoModal-currentCost-label"></span>: &nbsp;
                     <span class="cardInfoModal-currentCost-value text-info font-weight-bold"></span></p>
                 <p class="cardInfoModal-status"></p>
-                <h5 class="cardInfoModal-credit-received-heading" data-l10n-id="cards-infoModal-credit-received"></h5>
+                <h5 class="cardInfoModal-credit-received-heading" data-l10n-id="cards-infoModal-credit-received" data-l10n-args='{"percent": 0}'></h5>
                 <div class="cardInfoModal-credit-received-list container-fluid mb-3"></div>
                 <h5 data-l10n-id="cards-infoModal-attributes"></h5>
                 <p class="cardInfoModal-attributes text-muted"></p>
                 <h5 data-l10n-id="cards-infoModal-calamity-effects"></h5>
                 <p class="cardInfoModal-calamity-effects text-muted"></p>
-                <h5 class="cardInfoModal-credit-provided-heading" data-l10n-id="cards-infoModal-credit-provided"></h5>
+                <h5 class="cardInfoModal-credit-provided-heading" data-l10n-id="cards-infoModal-credit-provided" data-l10n-args='{"totalProvided": 0}'></h5>
                 <div class="cardInfoModal-credit-provided-list container-fluid"></div>
             </div>
             <div class="modal-footer">
