Remove obsolete 'revise' button

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -80,7 +80,7 @@
                 </ul>
             </div>
             <!-- Item 2: Number of cards [on SMALL and smaller also: points] -->
-            <div class="col-4 col-md-2 col-lg-1">
+            <div class="col-4 col-md-2 col-lg-2">
                 <div class="mb-0 text-nowrap" id="navbarCards">
                     <img class="inline-svg mr-1" id="navbarCardsIcon" src="img/cards.svg" alt=""><span
                         class="navbarCurrentNumCards">8</span><span class="text-muted navbarMaxCards">/11</span>
@@ -91,31 +91,25 @@
                 </div>
             </div>
             <!-- Item 3: Points -->
-            <div class="col-3 col-md-2 d-none d-md-inline-block">
+            <div class="col-3 col-md-3 col-lg-2 d-none d-md-inline-block">
                 <p class="navbar-brand fix-padding mb-0">
                     <span class="oi oi-target mr-2" aria-hidden="true"></span><span
                      class="navbarCurrentPoints">0</span><span class="text-muted navbarPointsTarget">/1400</span>
                 </p>
             </div>
-            <!-- Item 4: Revise -->
-            <div class="col-1 d-none d-md-inline-block">
-                <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'revise')"><span
-                    class="oi oi-random mr-2" aria-hidden="true"></span><span
-                    class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-revise"></span></a></p>
-            </div>
-            <!-- Item 5: Filter -->
+            <!-- Item 4: Filter -->
             <div class="col-1">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'filter')"><span
                     class="oi oi-eye mr-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-filter"></span></a></p>
             </div>
-            <!-- Item 6: Buy -->
+            <!-- Item 5: Buy -->
             <div class="col-2 col-md-1">
                 <p class="navbar-brand nav-action fix-padding mb-0"><a href="#" onclick="CivBuddy.buttonClick(this, 'cards', 'buy')"><span
                     class="oi oi-check mx-2" aria-hidden="true"></span><span
                     class="d-none d-lg-inline-block" data-l10n-id="cards-navbar-buy"></span></a></p>
             </div>
-            <!-- Item 7: Language -->
+            <!-- Item 6: Language -->
             <div class="col-1 d-none d-md-inline-block">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
@@ -125,7 +119,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- Item 8: Menu for small screens -->
+            <!-- Item 7: Menu for small screens -->
             <div class="col-1 d-inline-block d-md-none">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
