Prevent long game name from cluttering the navbar

--- a/resources/cards.html
+++ b/resources/cards.html
@@ -59,10 +59,10 @@
     <div class="container">
         <div class="row">
             <!-- Item 1: Link to 'players' page and game name -->
-            <div class="col-1 col-lg-3 d-none d-md-inline-block">
+            <div class="col-1 col-lg-3 d-none d-md-inline-block" style="overflow: hidden;">
                 <p class="navbar-brand fix-padding mb-0"><a class="nav-action add-game-id" href="players.html"><span
                     class="oi oi-arrow-thick-left mr-4" aria-hidden="true" style="position: relative; top: 3px;"
-                    ></span></a><span id="gameName1" class="d-none d-lg-inline-block"></span></p> <!-- TODO overflow ellipsis for long names -->
+                    ></span></a><span id="gameName1" class="d-none d-lg-inline-block"></span></p>
             </div>
             <!-- Item 2: Player -->
             <div class="col-4 col-md-3 col-lg-2">
